src/components/Header.css
header {
  background-color: #ffffff;
  color: #464646;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  padding: 15px 5%;
  width: 100%;
}

header img {
  height: 50px;
  display: block;
}

header ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  list-style: none;
  margin: 0;
  padding: 0;
}

header a {
  text-decoration: none;
  color: inherit;
  font-weight: bold;
  font-size: 12px;
  text-transform: uppercase;
  transition: color 0.2s;
}

header .active {
  border-bottom: 6px solid #0282F9;
  padding-bottom: 44px;
}


header a:hover {
  color: #0282f9;
}

/* MEDIA QUERY */
@media (min-width: 768px) {
  header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0 10%;
    height: 120px;
  }

  header img {
    height: 80px;
  }

  header a {
    font-size: 13px;
  }
}

